image gallery images were wrapping early when letter-spacing is non-zero, added a global fix

--- a/gato-component-gallery/src/main/resources/gato-component-gallery/css/gallery.scss
+++ b/gato-component-gallery/src/main/resources/gato-component-gallery/css/gallery.scss
@@ -6,6 +6,7 @@
     padding: 0px;
     width: calc(100% + 24px);
     box-sizing: border-box;
+    letter-spacing: 0;
 
     .gato-gallery-image {
       @extend .grid-cell;
